--- a/ID/Assignment/style.css
+++ b/ID/Assignment/style.css
@@ -1,3 +1,51 @@
 @charset "UTF-8";
 /* CSS Document */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+body {
+  background-color: #12171c;
+}
+header {
+  width: 100%;
+  height: 50%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 10%;
+  background: rgba(0, 0, 0, 0.2);
+	position: fixed;
+	height: 10%;
+}
+.logo {
+  font-size: 30px;
+  font-weight: bold;
+  color: white;
+  letter-spacing: 1.5px;
+  cursor: pointer;
+}
+nav li {
+  display: inline-block;
+  list-style: none;
+  padding: 0px 15px;
+}
+a, button {
+  font-size: 16px;
+  font-weight: 500;
+  color: #b7b9bb;
+  text-decoration: none;
+  cursor: pointer;
+}
+button {
+  background: #967526;
+  border: 2px solid #ffce1f;
+  padding: 9px 25px;
+}
 
+.header-pic {
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+}
