--- a/ID/Assignment/style.css
+++ b/ID/Assignment/style.css
@@ -10,14 +10,13 @@ body {
 }
 header {
   width: 100%;
-  height: 50%;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 10px 10%;
+  padding: 10px 5%;
   background: rgba(0, 0, 0, 0.2);
-	position: fixed;
-	height: 10%;
+  position: fixed;
+  height: 10%;
 }
 .logo {
   font-size: 30px;
@@ -26,7 +25,7 @@ header {
   letter-spacing: 1.5px;
   cursor: pointer;
 }
-nav li {
+.nav-bar li {
   display: inline-block;
   list-style: none;
   padding: 0px 15px;
@@ -43,9 +42,77 @@ button {
   border: 2px solid #ffce1f;
   padding: 9px 25px;
 }
-
 .header-pic {
   width: 100%;
   height: 100%;
   background-size: cover;
+}
+.hamburger {
+  display: none;
+}
+hr.new1 {
+  margin: 20px auto 0px auto;
+  width: 95%;
+  color: 1px solid rgba(41, 46, 50, 255);
+}
+.outer {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 10px;
+  width: 95%;
+  margin: auto;
+}
+@media only screen and (max-width: 980px) {
+  button {
+    background: #967526;
+    border: 2px solid #ffce1f;
+    padding: 9px 25px;
+    float: right;
+  }
+  .hamburger {
+    display: block;
+    cursor: pointer;
+  }
+  .hamburger .line {
+    width: 30px;
+    height: 3px;
+    background: #fefefe;
+    margin: 6px 0;
+  }
+  .nav-bar {
+    height: 0;
+    position: absolute;
+    top: 80px;
+    left: 0;
+    right: 0;
+    width: 100vw;
+    background: #11101b;
+    transition: 0.5s;
+    overflow: hidden;
+  }
+  .nav-bar.active {
+    height: 450px;
+  }
+  .nav-bar ul {
+    display: block;
+    width: fit-content;
+    margin: 80px auto 0 auto;
+    text-align: center;
+    transition: 0.5s;
+    opacity: 0;
+  }
+  .nav-bar.active ul {
+    opacity: 1;
+    display: flex;
+    flex-direction: column;
+    font-size: 50px;
+    font-weight: bold;
+  }
+  .nav-bar ul li a {
+    margin-botton: 12px;
+  }
+  .outer {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
 }
