--- a/ID/Assignment/style.css
+++ b/ID/Assignment/style.css
@@ -67,7 +67,7 @@ hr.new1 {
   width: 95%;
   margin: 10px auto;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
   grid-gap: 10px;
 }
 .img-wrapper {
@@ -105,6 +105,128 @@ hr.new1 {
 }
 .img-wrapper:hover > .content.fade {
   opacity: 1;
+}
+/*------------------------LOGIN PAGE--------------------------------------*/
+section {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+}
+section .imgBx {
+  position: relative;
+  width: 50%;
+  height: 100%;
+}
+section .imgBx:before {
+  position: absolute;
+  content: '';
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(225deg, #e91e63, #03a9f4);
+  z-index: 1;
+  mix-blend-mode: screen;
+}
+section .imgBx img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+section .contentBx {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+  height: 100%;
+}
+section .contentBx .formBx {
+  width: 50%;
+}
+section .contentBx .formBx h2 {
+  color: #607d8b;
+  font-weight: 600;
+  font-size: 1.5em;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+  border-bottom: 4px solid white;
+  display: inline-block;
+  letter-spacing: 1px;
+}
+section .contentBx .formBx .inputBx {
+  margin-bottom: 20px;
+}
+section .contentBx .formBx .inputBx span {
+  font-size: 16px;
+  margin-bottom: 5px;
+  display: inline-block;
+  color: #607d8b;
+  font-weight: 300;
+  letter-spacing: 1px;
+}
+section .contentBx .formBx .inputBx input {
+  width: 100%;
+  padding: 10px 20px;
+  outline: none;
+  font-weight: 400;
+  border: 1px solid #607d8b;
+  font-size: 16;
+  letter-spacing: 1px;
+  color: #607d8;
+  background: transparent;
+  border-radius: 30px;
+}
+section .contentBx .formBx .inputBx input[type="submit"] {
+  background: #1d222d;
+  color: white;
+  outline: none;
+  border: none;
+  font-weight: 500;
+  cursor: pointer;
+}
+section .contentBx .formBx .inputBx input[type="submit"]:hover {
+  background: #232935;
+}
+section .contentBx .formBx .remember {
+  margin-bottom: 10px;
+  color: #607d8b;
+  font-weight: 400;
+  font-size: 14px;
+}
+section .contentBx .formBx .inputBx p {
+  color: #607d8b;
+}
+section .contentBx .formBx .inputBx p a {
+  color: white;
+}
+section .contentBx .formBx h3 {
+  color: #607d8b;
+  text-align: center;
+  margin: 80px 0 10px;
+  font-weight: 500px;
+}
+section .contentBx .formBx .sci {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+section .contentBx .formBx .sci li {
+  width: 50px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #607d8b;
+  border-radius: 50%;
+  margin: 0 7px;
+  cursor: pointer;
+}
+section .contentBx .formBx .sci li:hover {
+  background: #232935;
 }
 @media only screen and (max-width: 980px) {
   button {
@@ -222,8 +344,6 @@ ul {
   transition: all 0.5s ease;
 }
 .footer-col .social-links a:hover {
-
-
   color: #24262b;
   background-color: #ffffff;
 }
@@ -234,7 +354,7 @@ ul {
     padding: 9px 25px;
     margin-left: 40%;
     float: right;
-	  }
+  }
 }
 @media only screen and (max-width: 767px) {
   button {
@@ -248,4 +368,39 @@ ul {
     width: 50%;
     margin-bottom: 30px;
   }
+  .news {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-gap: 20px;
+    width: 95%;
+    margin: auto;
+  }
+  section .imgBx {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+	section .contentBx {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		width: 100%;
+		height: 100%;
+		z-index: 1;
+	}
+	section .contentBx .formBx {
+		width: 100%;
+		padding: 40px;
+		background: rgba(255,255,255,0.8);
+		margin: 50px;
+	}
+	
+	section .contentBx .formBx h3{
+		color: #607d8b;
+		text-align: center;
+		margin: 30px 0 10px;
+		font-weight: 500;
+	}
 }
