--- a/ID/Assignment/style.css
+++ b/ID/Assignment/style.css
@@ -19,6 +19,10 @@ body {
   z-index: 10;
   height: 10%;
 }
+.navlogo {
+  width: 40px;
+  vertical-align: middle;
+}
 .logo {
   font-size: 30px;
   font-weight: bold;
@@ -70,6 +74,7 @@ hr.new1 {
   grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
   grid-gap: 10px;
 }
+
 .img-wrapper {
   position: relative;
   overflow: hidden;
@@ -100,6 +105,7 @@ hr.new1 {
 .img-wrapper:hover > img.blur {
   filter: blur(5px);
 }
+
 .img-wrapper > .content.fade {
   opacity: 0;
 }
@@ -153,7 +159,7 @@ section .contentBx .formBx h2 {
   font-size: 1.5em;
   text-transform: uppercase;
   margin-bottom: 20px;
-  border-bottom: 4px solid white;
+  border-bottom: 2px solid white;
   display: inline-block;
   letter-spacing: 1px;
 }
@@ -228,6 +234,38 @@ section .contentBx .formBx .sci li {
 section .contentBx .formBx .sci li:hover {
   background: #232935;
 }
+
+
+/*-----------------------------FEATURE PAGE-------------------------------------------*/
+.feature {
+	width: 55%; 
+	text-align: center; 
+	margin: 30px auto 0px auto;
+}
+
+.feature p {
+	color: white;
+	font-size: 20px;
+	text-align: left;
+	margin-top: 30px;
+	margin-bottom: 30px;
+}
+
+.feature hr {
+	margin: 30px auto 30px auto;
+}
+.feature-1 {
+	display: grid;
+	grid-template-columns: 1fr;
+}
+
+.feature h3 {
+	color: white;
+	font-size: 25px;
+	text-align: left;
+	margin-top: 30px;
+	letter-spacing: 1px;
+}
 @media only screen and (max-width: 980px) {
   button {
     background: #967526;
@@ -249,7 +287,7 @@ section .contentBx .formBx .sci li:hover {
   .nav-bar {
     height: 0;
     position: absolute;
-    top: 75px;
+    top: 85px;
     left: 0;
     right: 0;
     width: 100vw;
@@ -382,25 +420,24 @@ ul {
     width: 100%;
     height: 100%;
   }
-	section .contentBx {
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		width: 100%;
-		height: 100%;
-		z-index: 1;
-	}
-	section .contentBx .formBx {
-		width: 100%;
-		padding: 40px;
-		background: rgba(255,255,255,0.8);
-		margin: 50px;
-	}
-	
-	section .contentBx .formBx h3{
-		color: #607d8b;
-		text-align: center;
-		margin: 30px 0 10px;
-		font-weight: 500;
-	}
+  section .contentBx {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+  }
+  section .contentBx .formBx {
+    width: 100%;
+    padding: 40px;
+    background: rgba(255, 255, 255, 0.8);
+    margin: 50px;
+  }
+  section .contentBx .formBx h3 {
+    color: #607d8b;
+    text-align: center;
+    margin: 30px 0 10px;
+    font-weight: 500;
+  }
 }
