--- a/Assignment/style.css
+++ b/Assignment/style.css
@@ -8,6 +8,7 @@
 }
 body {
   background-color: #12171c;
+	font-family: "roboto";
 }
 /*----------------------------------NAVIGATION BAR----------------------------------*/
 #navbar {
@@ -394,7 +395,7 @@ section .contentBx .formBx .sci li:hover {
     overflow: hidden;
   }
   .nav-bar.active {
-    height: 450px;
+    height: 220px;
   }
   .nav-bar ul {
     display: block;
@@ -410,6 +411,7 @@ section .contentBx .formBx .sci li:hover {
     flex-direction: column;
     font-size: 50px;
     font-weight: bold;
+
   }
 }
 .container {
@@ -425,10 +427,8 @@ ul {
 }
 /*----------------------------------RESPONSIVE FROM TABLET VIEW----------------------------------*/
 @media only screen and (max-width: 767px) {
-
   .caption {
-    top: 70%;
-    left: 35%;
+    display:none;
   }
   .caption p {
     font-size: 25px;
@@ -485,6 +485,7 @@ ul {
     max-width: 100%;
   }
   .caption {
+	  display: unset;
     top: 82%;
     left: 35%;
   }
