--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 }
 body {
   background-color: #12171c;
-	font-family: "roboto";
+  font-family: "roboto";
 }
 /*----------------------------------NAVIGATION BAR----------------------------------*/
 #navbar {
@@ -33,10 +33,21 @@ body {
   letter-spacing: 1.5px;
   cursor: pointer;
 }
+.logo p {
+  display: inline-block;
+  margin-left: 5px;
+}
+.logo a {
+  font-size: 25px;
+  color: white;
+}
 .nav-bar li {
   display: inline-block;
   list-style: none;
   padding: 0px 15px;
+}
+.nav-bar p {
+  color: white;
 }
 a, .nav-button {
   font-size: 16px;
@@ -50,11 +61,17 @@ a, .nav-button {
   border: 2px solid #ffce1f;
   padding: 9px 25px;
 }
+.nav-button a {
+  color: white;
+}
 .header-pic {
   width: 100%;
   height: 100%;
   background-size: cover;
   display: block;
+}
+.header-button a {
+  color: white;
 }
 .hamburger {
   display: none;
@@ -97,12 +114,21 @@ hr.new1 {
   margin: 20px auto 0px auto;
   width: 95%;
 }
+.new1-featured {
+  color: white;
+  width: 95%;
+  margin: 0px auto 0px auto;
+  font-size: 20px;
+}
 .news {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-gap: 20px;
   width: 95%;
   margin: auto;
+}
+.newscontent {
+  width: 95%;
 }
 .grid {
   width: 95%;
@@ -129,6 +155,10 @@ hr.new1 {
   justify-content: center;
   align-items: center;
 }
+.content.fade {
+  color: white;
+  font-size: 22px;
+}
 .img-wrapper > img {
   transition: 200ms ease-in-out;
 }
@@ -146,6 +176,13 @@ hr.new1 {
 }
 .img-wrapper:hover > .content.fade {
   opacity: 1;
+}
+.text h1 {
+  color: white;
+  margin: 20px auto auto auto;
+}
+.text p {
+  color: white;
 }
 /*------------------------LOGIN PAGE--------------------------------------*/
 section {
@@ -304,6 +341,7 @@ section .contentBx .formBx .sci li:hover {
 /*-----------------------------FOOTER-------------------------------------------*/
 .footer {
   padding: 50px 0;
+  background-color: #14191e;
 }
 .footer-col {
   width: 25%;
@@ -315,6 +353,7 @@ section .contentBx .formBx .sci li:hover {
   margin-bottom: 35px;
   font-weight: 500;
   position: relative;
+  color: white;
 }
 .footer-col h4::before {
   content: "";
@@ -358,6 +397,9 @@ section .contentBx .formBx .sci li:hover {
 .footer-col .social-links a:hover {
   color: #24262b;
   background-color: #ffffff;
+}
+.copyright {
+  color: #bbbbbb;
 }
 /*----------------------------------RESPONSIVE @980PX----------------------------------*/
 @media only screen and (max-width: 980px) {
@@ -411,7 +453,6 @@ section .contentBx .formBx .sci li:hover {
     flex-direction: column;
     font-size: 50px;
     font-weight: bold;
-
   }
 }
 .container {
@@ -428,7 +469,7 @@ ul {
 /*----------------------------------RESPONSIVE FROM TABLET VIEW----------------------------------*/
 @media only screen and (max-width: 767px) {
   .caption {
-    display:none;
+    display: none;
   }
   .caption p {
     font-size: 25px;
@@ -474,7 +515,6 @@ ul {
     font-weight: 500;
   }
 }
-
 /*----------------------------------RESPONSIVE FROM MOBILE VIEW----------------------------------*/
 @media only screen and (max-width: 400px) {
   .header-pic {
@@ -485,7 +525,7 @@ ul {
     max-width: 100%;
   }
   .caption {
-	  display: unset;
+    display: unset;
     top: 82%;
     left: 35%;
   }
