--- a/style.css
+++ b/style.css
@@ -60,10 +60,13 @@ a, .nav-button {
   background: #967526;
   border: 2px solid #ffce1f;
   padding: 9px 25px;
+	transition: 0.6s;
+	overflow: hidden;
 }
 .nav-button a {
   color: white;
 }
+
 .header-pic {
   width: 100%;
   height: 100%;
@@ -305,7 +308,18 @@ section .contentBx .formBx .sci li {
 section .contentBx .formBx .sci li:hover {
   background: #232935;
 }
+
+#inputt {
+	color: white;
+}
+.sci li {
+	color: white;
+}
 /*-----------------------------FEATURE PAGE-------------------------------------------*/
+.featurevid {
+	width: 100%;
+}
+
 .feature {
   width: 55%;
   text-align: center;
@@ -337,6 +351,9 @@ section .contentBx .formBx .sci li:hover {
   color: white;
   font-size: 50px;
   letter-spacing: 1.5px;
+}
+.featurepic {
+	width: 100%;
 }
 /*-----------------------------FOOTER-------------------------------------------*/
 .footer {
