--- a/style.css
+++ b/style.css
@@ -483,6 +483,17 @@ section .contentBx .formBx .sci li:hover {
 ul {
   list-style: none;
 }
+section .contentBx .formBx .sci li {
+  width: 50px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #607d8b;
+  border-radius: 50%;
+  margin: 0 7px;
+  cursor: pointer;
+}
 /*----------------------------------RESPONSIVE FROM TABLET VIEW----------------------------------*/
 @media only screen and (max-width: 767px) {
   .caption {
