45th commit, added more Readme features

--- a/style.css
+++ b/style.css
@@ -312,6 +312,11 @@ section .contentBx .formBx .sci li:hover {
 #inputt {
 	color: white;
 }
+
+#inputt2 {
+	color: white;
+}
+
 .sci li {
 	color: white;
 }
