--- a/style.css
+++ b/style.css
@@ -387,6 +387,33 @@ section .contentBx .formBx .sci li:hover {
 .featurebutton {
   padding-top: 10px;
 }
+
+.featureouter {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	border: 1px solid white;
+	width: 90%;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.featureinner1 h1{
+	text-align: left;
+	color: white;
+	font-weight: bold;
+	font-size:30px;
+}
+
+.featureinner1 p{
+	text-align: left;
+	color: grey;
+	font-weight: bold;
+	font-size:15px;
+}
+
+.featureinner {
+	text-align: center;
+}
 a, .nav-button2 {
   font-size: 16px;
   font-weight: 500;
