--- a/style.css
+++ b/style.css
@@ -436,7 +436,7 @@ a, .nav-button2 {
   float: left;
   width: 25%;
   padding: 0 10px;
-	height: 370px;
+  height: 370px;
 }
 .details {
   margin: 20px auto 20px auto;
@@ -447,15 +447,14 @@ a, .nav-button2 {
   display: table;
   clear: both;
 }
-
 .card p {
   color: darkgrey;
-	margin-top: 10px;
+  margin-top: 10px;
 }
 .imgstyle {
-	width: 100%; 
-	border: 1px solid #49505a; 
-	border-radius: 5px;
+  width: 100%;
+  border: 1px solid #49505a;
+  border-radius: 5px;
 }
 /*-----------------------------FOOTER-------------------------------------------*/
 .footer {
@@ -630,6 +629,9 @@ section .contentBx .formBx .sci li {
     letter-spacing: 1px;
     text-align: left
   }
+  .img-wrapper {
+    width: 80%;
+  }
   .footer-col {
     width: 50%;
     margin-bottom: 30px;
@@ -668,6 +670,12 @@ section .contentBx .formBx .sci li {
     margin: 30px 0 10px;
     font-weight: 500;
   }
+  #inputt {
+    color: black;
+  }
+  #inputt2 {
+    color: black;
+  }
   .firstfeatureouter {
     margin-bottom: 100px;
     right: 5%;
@@ -684,7 +692,7 @@ section .contentBx .formBx .sci li {
     width: 100%;
     display: block;
     margin-bottom: 20px;
-	  height:100%;
+    height: 100%;
   }
 }
 /* Style the counter cards */
@@ -693,7 +701,7 @@ section .contentBx .formBx .sci li {
   padding: 16px;
   text-align: center;
   background-color: #1d2227;
-height:100%;
+  height: 100%;
 }
 }
 /*----------------------------------RESPONSIVE FROM MOBILE VIEW----------------------------------*/
